fix: add z-index

--- a/src/styles/navigator.scss
+++ b/src/styles/navigator.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  z-index: 10;
 
   .top-nav-inner {
     align-items: center;
