--- a/src/styles/resources_nav.scss
+++ b/src/styles/resources_nav.scss
@@ -7,6 +7,7 @@
   justify-content: space-between;
   position: sticky;
   top: 6rem;
+  z-index: 10;
 
   .resources-nav-inner {
     align-items: center;
